# mlws_web

./: .gitattributes  .gitmodules  .travis.yml  Cargo.toml  README.md  deploy.py
.github/workflows/: release.yml
src/: config.rs  keybind.rs  main.rs  opts.rs  soundboard_commands.rs  template.rs  ws.rs
templates/: index.html  keybind.html  repo.html  settings.html  sound.html
templates/css/: index.css  sound.css
