[package]
name = "mlws_web"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2018"


[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-web-actors = "2.0.0"
tera = {version = "1.5.0", default-features = false}
lazy_static = "1.4.0"
serde = "1.0.115"
serde_json = "1.0.57"

mlws_lib = {path = "./mlws_lib", features=["autoloop"]}