[package]
name = "mlws_web"
version = "0.1.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2018"

[dependencies]
tokio = {version = "0.2.22", features=["rt-core", "macros", "sync"]}
crossbeam-channel = "0.4.4"
warp = "0.2.5"
futures = "0.3.5"
mime_guess = "2.0.3"
tera = {version = "1.5.0", default-features = false}
lazy_static = "1.4.0"
serde = "1.0.115"
serde_json = "1.0.57"
mlws_lib = {path = "./mlws_lib", features=["autoloop"]}
binfs = {path = "./binfs"}
urldecode = "0.1.1"
structopt = "0.3"